refactor: remove all leftover deprecations